Fix memo headings inheriting global center alignment
The global h1 { text-align: center } was leaking into memo preview
headings. Override with text-align: left for #memoPreview headings.

--- a/src/side_panel/side_panel.css
+++ b/src/side_panel/side_panel.css
@@ -1621,6 +1621,7 @@ button {
 #memoPreview h4, #memoPreview h5, #memoPreview h6 {
     margin: 0.3em 0 0.2em;
     line-height: 1.3;
+    text-align: left;
 }
 
 #memoPreview h1 { font-size: 1.4em; }
